[workspace]
resolver = "2"
members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qudp",
    "qinterface",
    "qunreliable",
    "qconnection",
    "gm-quic",
    "h3-shim",
]
default-members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qinterface",
    "qconnection",
    "gm-quic",
    "h3-shim",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/genmeta/gm-quic"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.75.0"

[workspace.dependencies]
bitflags = "2"
bytes = "1"
cfg-if = "1"
dashmap = "6"
derive_builder = "0.20"
derive_more = "2"
enum_dispatch = "0.3"
futures = "0.3"
getset = "0.1"
netdev = "0.31"
nom = "8"
pin-project-lite = "0.2"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1" }
tracing = "0.1"

# h3 for h3-shim only , windows-sys, nix and libc for qudp only
# they are not the default members of the workspace
# windows-sys = "?"
# libc = "0.2"
# nix = "?"

# dev-dependencies, for examples
clap = { version = "4", features = ["derive"] }
h3 = "0.0.8"
h3-datagram = "0.0.2"
http = "1"
indicatif = { version = "0.17", features = ["tokio"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls-native-certs = "0.8"
tracing-subscriber = "0.3"

# members
qmacro = { path = "./qmacro", version = "0.2.3" }
qbase = { path = "./qbase", version = "0.2.3" }
qevent = { path = "./qevent", version = "0.2.3" }
qrecovery = { path = "./qrecovery", version = "0.2.3" }
qconnection = { path = "./qconnection", version = "0.2.3" }
qcongestion = { path = "./qcongestion", version = "0.2.3" }
qudp = { path = "./qudp", version = "0.2.3" }
qinterface = { path = "./qinterface", version = "0.2.3" }
qunreliable = { path = "./qunreliable", version = "0.2.3" }
gm-quic = { path = "./gm-quic", version = "0.2.3" }
h3-shim = { path = "./h3-shim", version = "0.2.3" }


[profile.bench]
debug = true
