[workspace]
resolver = "2"
members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qudp",
    "qinterface",
    "qunreliable",
    "qconnection",
    "gm-quic",
    "h3-shim",
]
default-members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qinterface",
    "qconnection",
    "gm-quic",
    "h3-shim",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/genmeta/gm-quic"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.88.0"

[workspace.dependencies]
bitflags = "2"
bytes = "1"
cfg-if = "1"
dashmap = "6"
derive_builder = "0.20"
derive_more = "2"
enum_dispatch = "0.3"
futures = "0.3"
getset = "0.1"
netdev = "0.39"
nom = "8"
netwatcher = "0.4"
pin-project-lite = "0.2"
rand = "0.9"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tracing = "0.1"
x509-parser = "0.18"

# h3 for h3-shim only , windows-sys, nix and libc for qudp only
# they are not the default members of the workspace
# windows-sys = "?"
# libc = "0.2"
# nix = "?"

# dev-dependencies, for examples
clap = { version = "4", features = ["derive"] }
h3 = "0.0.8"
h3-datagram = "0.0.2"
http = "1"
indicatif = { version = "0.18", features = ["tokio"] }
postcard = { version = "1", features = ["use-std"] }
rustls-native-certs = "0.8"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# members
qmacro = { path = "./qmacro" }
qbase = { path = "./qbase" }
qevent = { path = "./qevent" }
qrecovery = { path = "./qrecovery" }
qconnection = { path = "./qconnection" }
qcongestion = { path = "./qcongestion" }
qudp = { path = "./qudp" }
qinterface = { path = "./qinterface" }
qunreliable = { path = "./qunreliable" }
gm-quic = { path = "./gm-quic" }
h3-shim = { path = "./h3-shim" }


[profile.bench]
debug = true

[profile.release]
debug = true
