[workspace]
resolver = "2"
members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qudp",
    "qinterface",
    "qunreliable",
    "qconnection",
    "gm-quic",
    "h3-shim",
    "qtraversal",
    "qdns",
]
default-members = [
    "qmacro",
    "qbase",
    "qevent",
    "qrecovery",
    "qcongestion",
    "qinterface",
    "qconnection",
    "gm-quic",
    "h3-shim",
    "qtraversal",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/genmeta/gm-quic"
license = "Apache-2.0"
keywords = ["async", "quic", "http3"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.88.0"

[workspace.dependencies]
async-trait = "0.1.88"
bitflags = "2"
bon = "3"
bytes = "1"
cfg-if = "1"
dashmap = "6"
derive_builder = "0.20"
derive_more = "2"
enum_dispatch = "0.3"
futures = "0.3"
getset = "0.1"
netdev = "0.40"
nom = "8"
netwatcher = "0.4"
pin-project-lite = "0.2"
rand = "0.9"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
smallvec = { version = "1", features = [
    "union",
    "const_generics",
    "const_new",
] }
socket2 = { version = "0.6", features = ["all"] }
snafu = "0.8"
thiserror = "2"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tracing = "0.1"
x509-parser = "0.18"
url = "2.5.7"

# h3 for h3-shim only , windows-sys, nix and libc for qudp only
# they are not the default members of the workspace
# windows-sys = "?"
# libc = "0.2"
# nix = "?"

# dev-dependencies, for examples
clap = { version = "4", features = ["derive"] }
h3 = "0.0.8"
h3-datagram = "0.0.2"
http = "1"
indicatif = { version = "0.18", features = ["tokio"] }
postcard = { version = "1", features = ["use-std"] }
rustls-native-certs = "0.8"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# members
qmacro = { path = "./qmacro", version = "0.4.0" }
qbase = { path = "./qbase", version = "0.4.0" }
qevent = { path = "./qevent", version = "0.4.0" }
qrecovery = { path = "./qrecovery", version = "0.4.0" }
qconnection = { path = "./qconnection", version = "0.4.0" }
qcongestion = { path = "./qcongestion", version = "0.4.0" }
qudp = { path = "./qudp", version = "0.4.0" }
qinterface = { path = "./qinterface", version = "0.4.0" }
qunreliable = { path = "./qunreliable", version = "0.4.0" }
gm-quic = { path = "./gm-quic", version = "0.4.0" }
h3-shim = { path = "./h3-shim", version = "0.4.0" }
qtraversal = { path = "./qtraversal", version = "0.4.0" }


[profile.bench]
debug = true

[profile.release]
debug = true
