[package]
name = "gm-quic"
version = "0.2.2"
edition.workspace = true
description = "An IETF quic transport protocol implemented natively using async Rust"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
futures = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qconnection = { workspace = true }
qinterface = { workspace = true, features = ["qudp"] }
qevent = { workspace = true }
qrecovery = { workspace = true }
qunreliable = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
qevent = { workspace = true, features = ["enabled"] }
rustls = { workspace = true, features = ["ring"] }
rustls-native-certs = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-std"] }

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]
