[package]
name = "gm-quic"
version = "0.4.0"
edition.workspace = true
description = "An IETF quic transport protocol implemented natively using async Rust"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
futures = { workspace = true }
qconnection = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
postcard = { workspace = true }
qevent = { workspace = true, features = ["telemetry"] }
rustls = { workspace = true, features = ["ring"] }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-std", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing-appender = { workspace = true }
x509-parser = { workspace = true }

# console-subscriber = "0.4"

[features]
default = ["unreliable"]
telemetry = ["qconnection/telemetry"]
unreliable = ["qconnection/unreliable"]

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]
