[package]
name = "h3-shim"
version = "0.1.0"
edition.workspace = true
description = "Shim libray between gm-quic and h3"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
h3 = "0.0.7"
h3-datagram = "0.0.1"
bytes = { workspace = true }
futures = { workspace = true }
gm-quic = { workspace = true }
qbase = { workspace = true }
tokio = { workspace = true }
qconnection = { workspace = true }

[features]
unreliable = ["qconnection/unreliable"]
unix-sshd = []

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.features]
default = ["unix-sshd"]

[dev-dependencies]
libc = "0.2"
base64 = "0.21"
rpassword = "7.3"
crossterm = { version = "0.28", features = ["events", "event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http = { workspace = true }
rustls = { workspace = true, features = ["logging", "ring"] }
tokio = { workspace = true, features = ["io-std", "fs"] }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
pam = "0.7"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dev-dependencies]
pwhash = "1"

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]

[[example]]
name = "h3-server"

[[example]]
name = "h3-client"

[[example]]
name = "h3-sshd"
required-features = ["unix-sshd"]

[[example]]
name = "h3-ssh"
