[package]
name = "h3-shim"
version = "0.1.0"
edition.workspace = true
description = "Shim libray between gm-quic and h3"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

autoexamples = false

[dependencies]
h3 = { workspace = true }
h3-datagram = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
gm-quic = { workspace = true }
qbase = { workspace = true }
tokio = { workspace = true }
qconnection = { workspace = true }

[features]
unreliable = ["qconnection/unreliable"]

[dev-dependencies]
base64 = "0.22"
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.29", features = ["events", "event-stream"] }
http = { workspace = true }
indicatif = { workspace = true }
libc = "0.2"
qlog = { workspace = true, features = ["enabled"] }
rustls = { workspace = true, features = ["logging", "ring"] }
rustls-native-certs = { workspace = true }
rpassword = "7.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "fs"] }
tracing = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
pam = "0.7"

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]

[[example]]
name = "h3-server"

[[example]]
name = "h3-stress-client"

[[example]]
name = "h3-client"

[[example]]
name = "h3-ssh"
