[package]
name = "h3-shim"
version = "0.3.0"
edition.workspace = true
description = "Shim libray between gm-quic and h3"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

autoexamples = false

[dependencies]
h3 = { workspace = true }
h3-datagram = { workspace = true, optional = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
gm-quic = { workspace = true }
qbase = { workspace = true }
tokio = { workspace = true }
qconnection = { workspace = true }

[features]
unreliable = ["dep:h3-datagram", "qconnection/unreliable"]

[dev-dependencies]
base64 = "0.22"
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.29", features = ["events", "event-stream"] }
http = { workspace = true }
indicatif = { workspace = true }
libc = "0.2"
qevent = { workspace = true, features = ["telemetry"] }
rustls = { workspace = true, features = ["logging", "ring"] }
rustls-native-certs = { workspace = true }
rpassword = "7.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "fs", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }

# console-subscriber = "0.4"

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]

[[example]]
name = "h3-server"

[[example]]
name = "h3-client"
