[package]
name = "qbase"
version = "0.1.0"
edition.workspace = true
description = "Core structure of the QUIC protocol, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
deref-derive = { workspace = true }
derive_builder = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
nom = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rustls = { workspace = true, features = ["ring"] }
