[package]
name = "qcongestion"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
qbase = { workspace = true }
qrecovery = { workspace = true }
rand = { workspace = true }
