[package]
name = "qcongestion"
version.workspace = true
edition.workspace = true
description = "Congestion control in QUIC, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
qbase = { workspace = true }
qlog = { workspace = true }
qrecovery = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
