[package]
name = "qcongestion"
version = "0.4.0"
edition.workspace = true
description = "Congestion control in QUIC, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
qbase = { workspace = true }
qevent = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
