[package]
name = "qconnection"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
deref-derive = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qrecovery = { workspace = true }
qudp = { workspace = true }
qunreliable = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
