[package]
name = "qconnection"
version = "0.1.0"
edition.workspace = true
description = "Encapsulation of QUIC connections, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
enum_dispatch = { workspace = true }
futures = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qlog = { workspace = true }
qrecovery = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tracing = { workspace = true }
qinterface = { workspace = true }

# features: unreliable
qunreliable = { workspace = true, optional = true }

[features]
default = ["unreliable"]
unreliable = ["dep:qunreliable"]
