[package]
name = "qconnection"
version = "0.3.0"
edition.workspace = true
description = "Encapsulation of QUIC connections, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref", "display", "from"] }
enum_dispatch = { workspace = true }
futures = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qevent = { workspace = true }
qrecovery = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
qinterface = { workspace = true }
x509-parser = { workspace = true }

[target.'cfg(any(unix, windows))'.dependencies]
qinterface = { workspace = true, features = ["qudp"] }

# features: unreliable
qunreliable = { workspace = true, optional = true }

[features]
default = ["unreliable"]
unreliable = ["dep:qunreliable"]
telemetry = ["qevent/telemetry"]
