[package]
name = "qconnection2"
version = "0.0.1"
edition.workspace = true
description = "Encapsulation of QUIC connections, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
deref-derive = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qrecovery = { workspace = true }
qudp = { workspace = true }
qunreliable = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
