[package]
name = "qdns"
version = "0.4.0"
edition.workspace = true
description = "DNS publishing and resolution for gm-quic-traversal"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = "0.3"
gmdns = { git = "https://github.com/genmeta/gmdns.git", branch = "main" }
qbase = { workspace = true }
qinterface = { workspace = true }
rustls = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    # default features(excluding "default-tls")
    "charset",
    "rustls-no-provider",          # use system crypto provider (ring)
    "http2",
    # "macos-system-configuration", # removed in reqwest 0.13
    # additional features
    "json",
] }
url = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rustls = { workspace = true }
