[package]
name = "qinterface"
version = "0.2.2"
edition.workspace = true
description = "gm-quic's packet routing and definition of the underlying IO interface"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
qbase = { workspace = true }
qevent = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

qudp = { workspace = true, optional = true }

[features]
qudp = ["dep:qudp"]
