[package]
name = "qinterface"
version = "0.3.0"
edition.workspace = true
description = "gm-quic's packet routing and definition of the underlying IO interface"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
futures = { workspace = true }
netdev = { workspace = true }
netwatcher = { workspace = true }
qbase = { workspace = true }
qevent = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(any(unix, windows))'.dependencies]
qudp = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
qudp = ["dep:qudp"]
