[package]
name = "qlog"
version = "0.1.0"
edition.workspace = true
description = "qlog implementation"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
enum_dispatch = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
serde = { workspace = true, features = ["derive"] }
pin-project-lite = { workspace = true }
qbase = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
