[package]
name = "qmacro"
version = "0.4.0"
edition.workspace = true
description = "gm-quic's proc macros"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
proc-macro2 = "1"
syn = "2"
quote = "1"
