[package]
name = "qrecovery"
version = "0.0.1"
edition.workspace = true
description = "The reliable transport part of QUIC, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
qbase = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
deref-derive = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
enum_dispatch = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
