[package]
name = "qrecovery"
version = "0.1.0"
edition.workspace = true
description = "The reliable transport part of QUIC, a part of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
deref-derive = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
qbase = { workspace = true }
qlog = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
