[package]
name = "qresolve"
version = "0.5.0"
edition.workspace = true
description = "dquic's dns abstractions"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
qinterface = { workspace = true }
qbase = { workspace = true }
