[package]
name = "qtraversal"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
bitflags = { workspace = true }
nom = { workspace = true }
qbase = { workspace = true }
qudp = { workspace = true }
qevent = { workspace = true }
qinterface = { workspace = true, features = ["qudp"] }
rand = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
netdev = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
tokio = { features = ["fs"], workspace = true }
tokio-test = "0.4"
tracing = { workspace = true }

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["fmt", "ansi", "env-filter", "time", "tracing-log"]

[[example]]
name = "stun_client"

[[example]]
name = "stun_server"
