[package]
name = "qudp"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
libc = "0.2"
log = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[[example]]
name = "send"
path = "examples/send.rs"

[[example]]
name = "receive"
path = "examples/receive.rs"
